# djaodjin-signup

./: .gitignore  LICENSE.txt  Makefile  README.md  changelog  pyproject.toml  requirements.txt  setup.py
docs/: auth-workflows.rst  conf.py  extensions.rst  getting-started.rst  index.rst  quirks.rst  testcases.rst
signup/: __init__.py  api.py  auth.py  authentication.py  compat.py  decorators.py  docs.py  filters.py  forms.py  helpers.py  middleware.py  mixins.py  models.py  serializers.py  serializers_overrides.py  settings.py  signals.py  tests.py  urls.py  utils.py  validators.py  views.py
signup/api/: activities.py  auth.py  contacts.py  keys.py  tokens.py  users.py
signup/backends/: __init__.py  auth.py  auth_ldap.py  base.py  django_emailer.py  mfa.py  sts_credentials.py
signup/backends/email_verification/: __init__.py  base.py
signup/backends/phone_verification/: __init__.py  aws_sns.py  base.py  fake.py
signup/migrations/: 0001_v0_1_9.py  0002_0_2_0.py  0003_0_2_1.py  0004_0_2_6_dev.py  0005_0_2_8.py  0006_v0_4_7.py  0006_v0_4_7_dev.py  0007_v0_4_8.py  0008_v0_5_5.py  0009_v0_8_0.py  0010_v0_9_0.py  0011_auto_20231006_1747.py  0012_v0_10_0.py
signup/static/js/: djaodjin-password-strength.js  djaodjin-resources-vue.js  djaodjin-resources.js  djaodjin-signup-angular.js  djaodjin-signup-vue.js  djresourcesvue.js  password_strength.js
signup/templates/accounts/: activate.html  disabled_registration.html  login.html  password_reset.eml  recover.html  register.html  user_form.html  verify.html
signup/templates/contacts/: base.html  (+2 more)
signup/urls/: __init__.py  accounts.py  api.py  contacts.py  users.py
signup/views/: auth.py  contacts.py  saml.py  users.py
testsite/: __init__.py  forms.py  package.json  requirements-3.12.txt  requirements-3.9.txt  requirements-legacy.txt  requirements.txt  settings.py  signals.py  urls.py  wsgi.py
testsite/etc/: credentials  gunicorn.conf
testsite/fixtures/: default-db.json  test_data.json
testsite/templates/: app.html  base.html
testsite/templatetags/: testsite_tags.py
(+56 files in other folders)
